Enforce private signed object storage
